--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.lufinkey.react.weboauth">
+          package="com.mdashley.react.weboauth">
 
 </manifest>
   
