--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
-
 {
   "name": "react-native-web-oauth",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests specified\" && exit 0",
+    "lint": "eslint ."
   },
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
   "peerDependencies": {
     "react-native": "^0.41.2"
-
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.15.0"
   }
 }
