--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,19 +5,18 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 24
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -32,5 +31,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+	compile 'com.android.support:customtabs:24.0.0'
 }
   
