use Chrome CustomTabsIntent if useBrowser is set

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
 	<application>
 		<activity
+			android:launchMode="singleTask"
 			android:name="com.mdashley.react.weboauth.OAuthActivity">
 		</activity>
 	</application>
