--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0"
+  },
+  "dependencies": {
+    "querystring": "^0.2.0"
   }
 }
