use rn-nodeify to install http and url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "lint": "eslint ."
+	"lint": "eslint .",
+	"postinstall": "node ./node_modules/rn-nodeify/cmd.js --install http,url --hack"
   },
   "keywords": [
     "react-native"
@@ -18,6 +19,7 @@
     "eslint": "^4.15.0"
   },
   "dependencies": {
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "rn-nodeify": "^8.3.0"
   }
 }
