--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "lint": "eslint .",
-    "postinstall": "node ../rn-nodeify/cmd.js --install http,url --hack"
+    "lint": "eslint ."
   },
   "keywords": [
     "react-native"
@@ -20,8 +19,7 @@
   },
   "dependencies": {
     "querystring": "^0.2.0",
-    "rn-nodeify": "^8.3.0",
-    "react-native-http": "tradle/react-native-http#834492d",
-    "url": "~0.10.1"
+    "react-native-http": "0.0.3",
+    "url": "^0.10.3"
   }
 }
