--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "eslint": "^4.15.0"
   },
   "dependencies": {
-    "querystring": "^0.2.0",
-    "react-native-http": "0.0.3",
-    "url": "^0.10.3"
+    "querystring": "^0.2.0"
   }
 }
